tạo giao diện trang chủ phía client

--- a/src/app/client/client.component.html
+++ b/src/app/client/client.component.html
@@ -1,1 +1,13 @@
-<p>client works!</p>
+<div class="max-w-full mx-auto">
+  <header>
+    <app-header-client></app-header-client>
+  </header>
+
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+
+  <footer>
+    <app-footer-client></app-footer-client>
+  </footer>
+</div>
