--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,26 +1,4 @@
-<div class="wrapper">
-  <div class="preloader flex-column justify-content-center align-items-center">
-      <img class="animation__shake" src="../../../src/public/admin/dist/img/AdminLTELogo.png" alt="AdminLTELogo" height={60} width={60} />
-  </div>
-  <div class="content-wrapper">
-      <div class="content-header">
-          <div class="container-fluid">
-              <div class="row mb-2">
-                  <div class="col-sm-6">
-                      <h1 class="m-0">Dashboard</h1>
-                  </div>
-              </div>
-          </div>
-      </div>
-      <section class="content">
-          <div class="container-fluid">
-          </div>
-      </section>
-  </div>
-  <footer class="main-footer">
-      <strong>Copyright © 2022 ASM React-TypeScriptJS By Nguyễn Thành Đạt PH13533.</strong>
-  </footer>
-  <aside class="control-sidebar control-sidebar-dark">
-
-  </aside>
+<div class="min-h-full">
+  <app-nav-admin></app-nav-admin>
+  <router-outlet></router-outlet>
 </div>
