--- a/src/app/admin/product-admin/admin-product-list/admin-product-list.component.html
+++ b/src/app/admin/product-admin/admin-product-list/admin-product-list.component.html
@@ -1,5 +1,5 @@
 <header class="bg-white shadow">
-  <div class="max-w-7xl mx-auto py-6 px-4 sm:px-6 lg:px-8">
+  <div class="max-w-[1440px] mx-auto py-6 px-4 sm:px-6 lg:px-8">
       <div class="lg:flex lg:items-center lg:justify-between">
           <div class="flex-1 min-w-0">
           <h2 class="text-2xl font-bold leading-7 text-gray-900 sm:text-2xl sm:truncate uppercase">
@@ -18,7 +18,7 @@
   </div>
 </header>
 <main>
-  <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
+  <div class="max-w-[1440px] mx-auto py-6 sm:px-6 lg:px-8">
       <div class="flex flex-col">
           <div class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
               <div class="py-2 align-middle inline-block min-w-full sm:px-6 lg:px-8">
@@ -49,10 +49,9 @@
                                   </th>
                               </tr>
                           </thead>
-                          <!-- <tbody class="bg-white divide-y divide-gray-200">
+                          <tbody class="bg-white divide-y divide-gray-200">
                               <tr *ngFor="let product of products">
                                   <td class="px-9 py-4 whitespace text-sm text-gray-500">
-                                    {{product._id}}
                                   </td>
                                   <td class="px-6 py-4 whitespace">
                                       <div class="flex items-center">
@@ -80,13 +79,16 @@
                                       </div>
                                   </td>
                                   <td class="px-6 py-4 whitespace-nowrap">
-                                      <div class="flex items-center">
-                                          <a href="/admin/product/${post.id}/edit" class="text-amber-500 hover:text-amber-600 mx-[10px]">EDIT</a>
-                                          <button data-id="" class="btn text-red-500 hover:text-red-600 mx-[10px]">DELETE</button>
-                                      </div>
+                                    <div class="flex items-center">
+                                        <a routerLink="/admin/products/{{product._id}}" class="text-amber-500 hover:text-amber-600 mx-[10px]">
+                                          <button>DETAIL</button>
+                                        </a>
+                                        <a routerLink="/admin/products/edit/{{product._id}}" class="text-amber-500 hover:text-amber-600 mx-[10px]">EDIT</a>
+                                        <button (click)="onDelete(product._id)" class="btn text-red-500 hover:text-red-600 mx-[10px]">DELETE</button>
+                                    </div>
                                   </td>
                               </tr>
-                          </tbody> -->
+                          </tbody>
                       </table>
                   </div>
               </div>
