--- a/src/app/admin/product-admin/admin-product-form-add/admin-product-form-add.component.html
+++ b/src/app/admin/product-admin/admin-product-form-add/admin-product-form-add.component.html
@@ -13,7 +13,7 @@
   <div class="max-w-7xl mx-auto py-6 sm:px-6 lg:px-8">
       <div class="md:grid md:grid-cols-3 md:gap-6 ">
           <div class="mt-5 md:mt-0 md:col-span-3 border">
-              <form id="formAdd">
+              <form [formGroup]="productForm" (ngSubmit)="onSubmit()">
                   <div class="shadow sm:rounded-md sm:overflow-hidden">
                       <div class="px-4 py-5 bg-white space-y-6 sm:p-6">
                           <div class="col-span-6">
@@ -25,32 +25,32 @@
 
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Tên sản phẩm <span class="text-[red]">*</span></label>
-                              <input type="text" id="name-product" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
+                              <input type="text" formControlName="name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
+                              <app-show-validate [field]="productForm.get('name')" key="Tên sẩn phẩm"></app-show-validate>
                           </div>
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Giá <span class="text-[red]">*</span></label>
-                              <input type="number" id="price-product" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
+                              <input type="number" formControlName="price" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
                           </div>
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Số lượng <span class="text-[red]">*</span></label>
-                              <input type="number" id="quantity-product" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
+                              <input type="number" formControlName="quantity" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
                           </div>
                           <div>
                               <label class="block text-sm font-medium text-gray-700">Mô tả nhỏ <span class="text-[red]">*</span></label>
                               <div class="mt-1">
-                                  <textarea  rows="5" id="short_desc-product" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+                                  <textarea  rows="5" formControlName="short_desc" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
                               </div>
                           </div>
                           <div>
                               <label class="block text-sm font-medium text-gray-700">Mô tả <span class="text-[red]">*</span></label>
                               <div class="mt-1">
-                                  <textarea  rows="5" id="desc-product" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
+                                  <textarea  rows="5" formControlName="desc" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
                               </div>
                           </div>
                           <div>
                               <label class="block text-sm font-medium text-gray-700">
                               Hình ảnh <span class="text-[red]">*</span></label>
-                              <img src="" id="img-preview" class="w-[240px] h-[140px]"/>
                               <div class="mt-1 flex justify-center px-6 pt-5 pb-6 border-2 border-gray-300 border-dashed rounded-md">
                                   <div class="space-y-1 text-center">
                                       <svg class="mx-auto h-12 w-12 text-gray-400" stroke="currentColor" fill="none" viewBox="0 0 48 48"
@@ -62,7 +62,7 @@
                                       <div class="flex text-sm text-gray-600">
                                       <label class="relative cursor-pointer bg-white rounded-md font-medium text-indigo-600 hover:text-indigo-500 focus-within:outline-none focus-within:ring-2 focus-within:ring-offset-2 focus-within:ring-indigo-500">
                                           <span>Upload a file</span>
-                                          <input id="file-upload" name="file-upload" type="file" class="sr-only">
+                                          <input formControlName="file-upload" name="file-upload" type="file" class="sr-only">
                                       </label>
                                       <p class="pl-1">or drag and drop</p>
                                       </div>
