--- a/src/app/admin/product-admin/admin-product-list/admin-product-list.component.html
+++ b/src/app/admin/product-admin/admin-product-list/admin-product-list.component.html
@@ -60,7 +60,7 @@
                                   </td>
                                   <td class="px-6 py-4 whitespace w-[200px]">
                                       <div class="flex items-center ">
-                                          <img src="{{product.img}}" alt="" class="w-[200px] h-[80px]">
+                                          <img src="{{product.img}}" alt="" class="w-full">
                                       </div>
                                   </td>
                                   <td class="px-6 py-4 whitespace">
@@ -80,11 +80,11 @@
                                   </td>
                                   <td class="px-6 py-4 whitespace-nowrap">
                                     <div class="flex items-center">
-                                        <a routerLink="/admin/products/{{product._id}}" class="text-amber-500 hover:text-amber-600 mx-[10px]">
+                                        <a routerLink="/admin/products/{{product._id}}" class="text-yellow-400 hover:text-yellow-400 mx-[10px]">
                                           <button>DETAIL</button>
                                         </a>
                                         <a routerLink="/admin/products/edit/{{product._id}}" class="text-amber-500 hover:text-amber-600 mx-[10px]">EDIT</a>
-                                        <button (click)="onDelete(product._id)" class="btn text-red-500 hover:text-red-600 mx-[10px]">DELETE</button>
+                                        <button (click)="onDelete(product._id)" class="btn text-red-600 hover:text-red-600 mx-[10px]">DELETE</button>
                                     </div>
                                   </td>
                               </tr>
