--- a/src/app/client/layouts/header-client/header-client.component.html
+++ b/src/app/client/layouts/header-client/header-client.component.html
@@ -1,27 +1,26 @@
-<div class="bg-white h-[50px] mb-[10px]">
-    <div class="max-w-[1440px] mx-auto text-[15px] leading-[20px]">
-        <div class="grid grid-cols-3 gap-5 mt-4 mb-4">
-            <div class="grid grid-cols-2 mx-auto">
-                <p class="mr-[10px]">Bạn đang xem giá, tồn kho tại</p>
-                <div class="location-dropdown">
-                    <div class="location-dropdown-title">
-                        <select class="location_name border-none bg-none text-[#c6992f]">
-                            <option value="1" selected class="bg-[#c69a39] text-[#fff]">Hà Nội</option>
-                            <option value="2" class="bg-[#c69a39] text-[#fff]">Hồ Chí Minh</option>
-                            <option value="3" class="bg-[#c69a39] text-[#fff]">Đà Nẵng</option>
-                        </select>
-                    </div>
-                    <div class="location-dropdown-list hidden"></div>
+<div class="bg-white h-[25px]">
+    <div class="max-w-[1440px] mx-auto text-[14px] leading-[20px]">
+        <div class="grid grid-cols-3 gap-5 py-[2px]">
+            <div class="grid grid-cols-1 text-center">
+                <div class="text-[14px]">
+                    <a routerLink="https://www.facebook.com/nxbkimdong" target="_blank">
+                        <i class="fa fa-facebook  text-sky-700 " aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.instagram.com/kimdongbooks/" target="_blank" class="ins-icon">
+                        <i class="fa fa-instagram mx-[20px] text-pink-500" aria-hidden="true"></i>
+                    </a>
+                    <a href="https://www.youtube.com/user/KimDongPublishingHou" target="_blank" class="yt-icon">
+                        <i class="fa fa-youtube-play text-red-500" aria-hidden="true"></i>
+                    </a>
                 </div>
             </div>
-            <div class="grid grid-cols-1 text-center">
-                <p>Hotline:
-                    <span class="text-[#f1aa0c]">
-                        HN: 0969.120.120 - SG: 0965.123.123 - ĐN:
-                        096.123.9797 - CSKH Online
-                        037.462.9999 - 096.539.7966
-                    </span>
-                </p>
+            <div class="grid grid-cols-1">
+                <div class="flex">
+                    <i class="fa fa-rss my-auto mr-[10px]"></i>
+                    <marquee behavior="scroll" direction="left">
+                      <p> Chào mừng bạn đến với Kim Đồng Book. Nếu bạn cần giúp đỡ, hãy liên hệ với chúng tôi qua hotline: (+84) 1900571595 hoặc email: cskh_online@nxbkimdong.com.vn.</p>
+                    </marquee>
+                </div>
             </div>
             <div class="grid grid-cols-1 mx-auto">
                 <ul class="flex">
@@ -39,12 +38,12 @@
         </div>
     </div>
 </div>
-<div class="bg-[#c69a39] h-[100px]">
+<div class="bg-[#be3e42] h-[100px]">
     <div class="max-w-[1440px] mx-auto">
         <div class="grid grid-cols-3">
             <div class="my-[15px]">
                 <a routerLink="/">
-                    <img src="../../../src/public/image/NTĐ (3).png" class="w-[70px] h-[70px] mx-auto">
+                    <img src="https://res.cloudinary.com/dvj4wwihv/image/upload/v1654697466/logo_sl4p9x.webp" class="w-[55px] h-[70px] mx-auto">
                 </a>
             </div>
             <div class="h-[35px] my-[35px] bg-white">
@@ -62,8 +61,8 @@
                     </button>
                 </form>
             </div>
-            <div class="my-auto mx-auto">
-                <a routerLink="/cart" class="flex">
+            <div class="my-auto mx-auto text-white ">
+                <a routerLink="/cart" class="flex hover:text-gray-100">
                     <i class="fas fa-shopping-cart text-[35px] mr-[10px]"></i>
                     <p class="text-[20px]">Cart</p>
                     <div class="shopee-cart-number-badge"></div>
@@ -72,10 +71,10 @@
         </div>
     </div>
 </div>
-<div class="bg-[#daab47] h-[50px]">
+<div class="bg-[#cd4040] h-[50px]">
     <div class="max-w-[1440px] mx-auto">
         <div class="flex justify-center">
-            <nav class="">
+            <nav class="text-white">
                 <ul class="flex h-[50px] py-2">
                     <li>
                         <a routerLink="/" class="menu-item">Trang chủ</a>
