--- a/src/styles.css
+++ b/src/styles.css
@@ -4,13 +4,7 @@
 @tailwind utilities;
 @layer components {
   .menu-item {
-      @apply mx-5 leading-[35px] inline-block
-  }
-  /* .nav-item {
-      @apply mx-5 inline-block
-  } */
-  .sub-menu-item {
-      @apply block p-2 hover:font-medium hover:text-black cursor-pointer
+      @apply mx-5 leading-[35px] inline-block hover:text-gray-100
   }
   .shopee-cart-number-badge {
       @apply relative rounded-[2.75rem] min-w-[0.6875rem] leading-[1.2em] p-[0.3125rem] top-[-10px]
@@ -26,7 +20,7 @@
       @apply w-[345px] h-[400px]
   }
   .title {
-      @apply text-[20px] text-[#c69a39] mb-[15px] font-bold
+      @apply text-[20px] text-black mb-[15px] font-bold
   }
   .title-1 {
       @apply text-[17px] font-bold
@@ -35,6 +29,9 @@
       @apply text-[15px] my-[5px]
   }
   .menu-footer {
-      @apply my-[10px] ml-[15px]
+      @apply my-[10px] hover:text-[#d51c24]
+  }
+  .menu-footer a{
+      @apply  hover:text-[#d51c24]
   }
 }
