--- a/src/app/client/product/product-client-list/product-client-list.component.html
+++ b/src/app/client/product/product-client-list/product-client-list.component.html
@@ -1,8 +1,19 @@
 <main class="mt-[10px]">
     <!-- <Banner /> -->
     <div class="max-w-[1440px] mx-auto">
+        <div class="w-[1440px] py-[10px] flex border-b-2 border-[#f2f2f2]">
+            <div class="mx-2 text-[#5d5f6c]">
+                <i class="fa fa-angle-left" aria-hidden="true"></i>
+            </div>
+            <div class="text-yellow-500">
+                <a href="/blog" class="text-yellow-500 font-semibold">Quay lại trang</a>
+            </div>
+            <div class="mx-2 text-[#5d5f6c]">
+                <i class="fa fa-angle-right" aria-hidden="true"></i>
+            </div>
+            <div class="text-yellow-500 font-semibold"></div>
+        </div>
         <div class="my-[20px]">
-            <h2 class="font-semibold text-2xl uppercase my-[30px] text-center">Tất cả Sản phẩm</h2>
             <div class="grid grid-cols-5 gap-8">
                 <div class="border p-3">
                     <a routerLink="/sanpham/:id">
