update phầ thêm mới products có thêm danh mục

--- a/src/app/admin/product-admin/admin-product-form-add/admin-product-form-add.component.html
+++ b/src/app/admin/product-admin/admin-product-form-add/admin-product-form-add.component.html
@@ -19,7 +19,8 @@
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Tên danh mục <span class="text-[red]">*</span></label>
                               <select name="" formControlName="categoryId" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md pl-[10px]">
-                                      <option value="${post.id}"></option>
+                                    <option value="0">Vui lòng chọn danh mục</option>
+                                      <option *ngFor="let cate of category" value={{cate._id}}>{{cate.name}}</option>
                               </select>
                           </div>
 
@@ -32,6 +33,11 @@
                               <label class="block text-sm font-medium text-gray-700">Giá <span class="text-[red]">*</span></label>
                               <input type="number" formControlName="price" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
                               <app-show-validate [field]="productForm.get('price')" key="Giá sẩn phẩm"></app-show-validate>
+                          </div>
+                          <div class="col-span-6">
+                              <label class="block text-sm font-medium text-gray-700">Giá khuyến mại <span class="text-[red]">*</span></label>
+                              <input type="number" formControlName="sale_price" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
+                              <app-show-validate [field]="productForm.get('sale_price')" key="Gía khuyến mại sẩn phẩm"></app-show-validate>
                           </div>
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Số lượng <span class="text-[red]">*</span></label>
