--- a/src/app/admin/product-admin/admin-product-list/admin-product-list.component.html
+++ b/src/app/admin/product-admin/admin-product-list/admin-product-list.component.html
@@ -39,6 +39,9 @@
                                   giá
                                   </th>
                                   <th scope="col" class="px-9 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
+                                  giá khuyến mại
+                                  </th>
+                                  <th scope="col" class="px-9 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
                                   số lượng
                                   </th>
                                   <th scope="col" class="px-9 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">
@@ -66,6 +69,11 @@
                                   <td class="px-6 py-4 whitespace">
                                       <div class="flex items-center">
                                         {{product.price}}
+                                      </div>
+                                  </td>
+                                  <td class="px-6 py-4 whitespace">
+                                      <div class="flex items-center">
+                                        {{product.sale_price}}
                                       </div>
                                   </td>
                                   <td class="px-6 py-4 whitespace">
