--- a/src/app/admin/product-admin/admin-product-form-add/admin-product-form-add.component.html
+++ b/src/app/admin/product-admin/admin-product-form-add/admin-product-form-add.component.html
@@ -27,36 +27,36 @@
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Tên sản phẩm <span class="text-[red]">*</span></label>
                               <input type="text" formControlName="name" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
-                              <app-show-validate [field]="productForm.get('name')" key="Tên sẩn phẩm"></app-show-validate>
+                              <app-show-validate [field]="productForm.get('name')"></app-show-validate>
                           </div>
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Giá <span class="text-[red]">*</span></label>
                               <input type="number" formControlName="price" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
-                              <app-show-validate [field]="productForm.get('price')" key="Giá sẩn phẩm"></app-show-validate>
+                              <app-show-validate [field]="productForm.get('price')"></app-show-validate>
                           </div>
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Giá khuyến mại <span class="text-[red]">*</span></label>
                               <input type="number" formControlName="sale_price" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
-                              <app-show-validate [field]="productForm.get('sale_price')" key="Gía khuyến mại sẩn phẩm"></app-show-validate>
+                              <app-show-validate [field]="productForm.get('sale_price')"></app-show-validate>
                           </div>
                           <div class="col-span-6">
                               <label class="block text-sm font-medium text-gray-700">Số lượng <span class="text-[red]">*</span></label>
                               <input type="number" formControlName="quantity" class="mt-1 focus:ring-indigo-500 focus:border-indigo-500 block w-full shadow-sm sm:text-sm h-[30px] border border-gray-300 rounded-md">
-                              <app-show-validate [field]="productForm.get('quantity')" key="Số lượng sẩn phẩm"></app-show-validate>
+                              <app-show-validate [field]="productForm.get('quantity')"></app-show-validate>
                           </div>
                           <div>
                               <label class="block text-sm font-medium text-gray-700">Mô tả nhỏ <span class="text-[red]">*</span></label>
                               <div class="mt-1">
                                   <textarea  rows="5" formControlName="short_desc" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
                               </div>
-                              <app-show-validate [field]="productForm.get('short_desc')" key="Mô tả nhỏ sẩn phẩm"></app-show-validate>
+                              <app-show-validate [field]="productForm.get('short_desc')"></app-show-validate>
                           </div>
                           <div>
                               <label class="block text-sm font-medium text-gray-700">Mô tả <span class="text-[red]">*</span></label>
                               <div class="mt-1">
                                   <textarea  rows="5" formControlName="desc" class="shadow-sm focus:ring-indigo-500 focus:border-indigo-500 mt-1 block w-full sm:text-sm border border-gray-300 rounded-md"></textarea>
                               </div>
-                              <app-show-validate [field]="productForm.get('desc')" key="Mô tả sẩn phẩm"></app-show-validate>
+                              <app-show-validate [field]="productForm.get('desc')"></app-show-validate>
                           </div>
                           <div>
                               <label class="block text-sm font-medium text-gray-700">
